--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
             <header class="main-section__header">
                 <a href="#"><img class="main-section__logo" src="./img/favicon.png" alt="logo"></a>
             </header>
+            <nav class="main-section__nav nav-menu">
+                <ul class="nav-menu__list">
+                    <li class="nav-menu__list-item"><a href="#about-me"> About me </a></li>
+                    <li class="nav-menu__list-item"><a href="#lessons"> Lessons</a></li>
+                    <li class="nav-menu__list-item"><a href="#">Entry </a> </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="container main-section__content-container">
+            
         </div>
     </section>
     
