Creating first main section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./sass/style.css"/>
-    <title>Document</title>
+    <script src="https://kit.fontawesome.com/92ba9f192f.js" crossorigin="anonymous"></script>
+    <title>Florist Portfolio</title>
 </head>
 <body>
     <section class="main-section">
@@ -22,7 +23,50 @@
             </nav>
         </div>
         <div class="container main-section__content-container">
-            
+            <div class="left-wrapper">
+                <img src="./img/main.png" alt="florist"/>
+            </div>
+            <div class="right-wrapper">
+                <div class="right-wrapper__icons-box icons">
+                    <div class="icons__item">
+                        <i class="fa-brands fa-skype"></i>
+                    </div>
+                    <div class="icons__item">
+                        <i class="fa-brands fa-vk"></i>
+                    </div>
+                    <div class="icons__item">
+                        <i class="fa-brands fa-telegram"></i>
+                    </div>
+                    <div class="icons__item">
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
+                </div>
+                <h1 class="right-wrapper__title title">
+                    I am Ann
+                    <hr class="title__hr">
+                </h1>
+                <p class="right-wrapper__text">
+                    Florist teacher with 8 years of experience
+                </p>
+                <div class="right-wrapper__button buttons">
+                    <button class="buttons__main-btn">
+                        Book a lesson
+                    </button>
+                    <div class="right-wrapper__icon-btn buttons__icon-btn">
+                        <img src="./img/icon-chat.png" alt="chat"/>
+                        <p class="buttons__text">Do you <br>
+                        have questions?</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="main-section__first-elipse elipse">
+                <div class="elipse__subtract"></div>
+            </div>
+
+        </div>
+        <div class="main-section__second-elipse elipse elipse_dig">
+            <div class="elipse__subtract elipse__subtract_big"></div>
         </div>
     </section>
     
