Create a second section container

--- a/index.html
+++ b/index.html
@@ -69,6 +69,51 @@
             <div class="elipse__subtract elipse__subtract_big"></div>
         </div>
     </section>
-    
+
+    <section class="second-section">
+        <div class="container second-section__container">
+            <h2 class="second-section__title title">
+                <hr class="title__hr"> Teaching
+            </h2>
+            <div class="second-section__cards-box">
+                <div class="second-section__cards-item cards-item">
+                    <img class="cards-item__img" src="./img/wedding1.png" alt="Wedding"/>
+                    <p class="cards-item__text">
+                        Wedding bouquets
+                    </p>
+                </div>
+                <div class="second-section__cards-item cards-item">
+                    <img class="cards-item__img" src="./img/box2.png" alt="Boxes"/>
+                    <p class="cards-item__text">
+                        Flower <br>boxes
+                    </p>
+                </div>
+                <div class="second-section__cards-item cards-item">
+                    <img class="cards-item__img" src="./img/wreath3.png" alt="Wreath"/>
+                    <p class="cards-item__text">
+                        Floral <br>wreath
+                    </p>
+                </div>
+            </div>
+                <div class="second-section__icons-box icons-box">
+                    <div class="second-section__icons-item icons-item">
+                        <img class="icons-item__img" src="./img/icon-1.png" alt="first-icon"/>
+                        <p class="icons-item__text"> <span>8</span> <br> years of <br>
+                        expirience</p>
+                    </div>
+                    <div class="second-section__icons-item icons-item">
+                        <img class="icons-item__img" src="./img/icon-2.png" alt="second-icon"/>
+                        <p class="icons-item__text"> <span>500</span> <br> students <br>
+                        </p>
+                    </div>
+                    <div class="second-section__icons-item icons-item">
+                        <img class="icons-item__img" src="./img/icon-3.png" alt="third-icon"/>
+                        <p class="icons-item__text"> <span>700</span> <br> good reviews<br>
+                        </p>
+                    </div>
+                </div>
+        </div>
+
+    </section>
 </body>
 </html>
