Create second section

--- a/index.html
+++ b/index.html
@@ -112,8 +112,15 @@
                         </p>
                     </div>
                 </div>
+                <div class="second-section__first-elipse elipse">
+                <div class="elipse__subtract"></div>
+            </div>
+            <div class="second-section__second-elipse elipse">
+                <div class="elipse__subtract"></div>
+            </div>
         </div>
 
     </section>
+
 </body>
 </html>
