Create third section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
     </section>
 
-    <section class="second-section">
+    <section class="second-section" id="about-me">
         <div class="container second-section__container">
             <h2 class="second-section__title title">
                 <hr class="title__hr"> Teaching
@@ -120,6 +120,48 @@
             </div>
         </div>
 
+    </section>
+    <section id="lessons" class="third-section">
+         <div class="container third-section__container">
+            <div class="third-section__left-wrapper">
+                <h3 class="third-section__left-title title">
+                    <hr class="title__hr"> Teaching
+                </h3>
+            </div>
+            <div class="third-section__right-wrapper">
+                <h4 class="third-section__right-title title">
+                    <hr class="title__hr title__hr_top"> Become <br> a florist
+                </h4>
+                <p class="third-section__text">
+                      In the same way, the scope<br>
+                    and place of staff training<br>
+                    entails the process of introducing<br>
+                    and modernizing the positions taken<br>
+                    by the participants in relation <br>
+                    to the tasks set.<br>
+                    <br>
+                      Comrades! the implementation of <br>
+                    the planned targets allows you <br>
+                    to perform important tasks for the<br>
+                    development of mass participation 
+                    <br>systems.
+                </p>
+                <div class="right-wrapper__button buttons">
+                    <button class="buttons__main-btn">
+                        Book a lesson
+                    </button>
+                    <div class="right-wrapper__icon-btn buttons__icon-btn">
+                        <img src="./img/icon-chat.png" alt="chat"/>
+                        <p class="buttons__text">Do you <br>
+                        have questions?</p>
+                    </div>
+                </div>
+            </div>
+            <div class="third-section__first-elipse elipse elipse_dig">
+                <div class="elipse__subtract elipse__subtract_big"></div>
+            </div>
+            <img class="third-section__figure" src="./img/Subtract.svg"/>
+         </div>
     </section>
 
 </body>
